[package]
name = "mouse_position"
authors = ["Fayez Nazzal"]
description = "Get the mouse position on Linux, Windows and MacOS"
repository = "https://github.com/fayez-nazzal/mouse_position"
keywords = ["mouse", "position", "linux", "windows", "macos"]
categories = ["gui"]
license = "MIT"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
x11-dl = "2.20.1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.22.3"
